--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
         <p><span id="weChatId"></span></p>
         <button id="copyButton">复 制 微 信 号</button>
-        <img src="./biubiu.png" alt="微信二维码">
+        <img src="./images/biubiu.png" alt="微信二维码">
     </div>
 
     <script type="text/javascript">
